--- a/config.toml
+++ b/config.toml
@@ -1,84 +1,72 @@
 baseurl = "https://cyris.pen.moe/"
 languageCode = "en-us"
 Title = "Cyris's pen"
-theme = "hugo_theme_pickles"
+theme = "hugo-theme-yuki"
 publishDir = "docs"
-# Copyright notice. This is displayer in the footer.
-copyright = "&copy; 2019 Cyris. Powered by Hugo, Pickles."
-custom_css = "/static/css/custom.css"
 
+# Copyright notice. This will display on the footer.
+copyright = ""
+ 
+# Theme config
 [params]
   paginate = 10
-  # Social accounts. Link to these accounts are displayed in the header and
-  # footer
-  twitter = "cyris_moe"
-  facebook = ""
-  instagram = ""
-  googleplus = "" # https://plus.google.com/u/0/xxxxxx
-  github = "iCyris"
-  gitlab = ""
-  npm = ""
-  codepen = ""
-  dribbble = ""
-  fivehundredpx = "" # 500px
-  flickr = ""
-  pinterest = ""
-  tumblr = ""
-  vimeo = ""
-  youtube = ""
-  linkedin = ""
-  # Disqus shortname
-  disqus = ""
-  # Google Analytics API key.
-  ga_api_key = "Your Google Analytics tracking id"
+  
+  # The information will display on the post pages.
   author = "Cyris"
-  authorwebsite = "cyris.moe"
-  avatar = "https://cdn.jsdelivr.net/npm/cyris@1.0.1/img/profile.png"
-  contact = ""
-  bio = "Front-end Web Developer"
-  # Short subtitle/tagline. This is displayed in the header.
-  subtitle = ""
-  # Logo image. This is displayed ogp image.
-  logo = "/path/to/logo"
+  description = "Web Developer"
+  authorwebsite = "https://cyris.moe"
+  
+  # The path to your images
   favicon = "https://cdn.jsdelivr.net/npm/cyris@1.0.1/favicon.png"
-
-[[menu.main]]
-    name = "Blog"
+  logo = "https://cdn.jsdelivr.net/npm/cyris@1.0.1/favicon.png"
+  avatar = "/images/profile.png"
+  displayImg = "/images/display.png"
+  
+  # This will display on the index page
+  snsTitle = "Cyris's pen"
+  
+  # Google Analytics API key.
+  ga_api_key = "UA-120896908-1"
+  
+# Navbar config
+[[menu.nav]]
+    name = "HOME"
     url = "/"
     weight = 1
 
-[[menu.main]]
-    name = "About"
-    url = "/about"
+[[menu.nav]]
+    name = "BLOG"
+    url = "/posts"
     weight = 2
 
-[[menu.main]]
-    name = "Tags"
+[[menu.nav]]
+    name = "ABOUT"
+    url = "/pages/about"
+    weight = 3
+    
+[[menu.nav]]
+    name = "TAGS"
     url = "/tags/"
     weight = 4
+    
+[[menu.nav]]
+    name = "FRIENDS"
+    url = "/pages/links"
+    weight = 5
 
-[related]
-  # Only include matches with rank >= threshold. This is a normalized rank between 0 and 100.
-  threshold = 80
+# Social accounts config (This will display on the index page)
+[[menu.social]]
+    name = "CYRIS.MOE"
+    url = "https://cyris.moe"
+    weight = 1
+    
+[[menu.social]]
+    name = "Twitter"
+    url = "https://twitter.com/cyris_moe"
+    weight = 2
 
-  # To get stable "See also" sections we, by default, exclude newer related pages.
-  includeNewer = false
-
-  # Will lower case keywords in both queries and in the indexes.
-  toLower = false
-
-  [[related.indices]]
-  name = "keywords"
-  weight = 150
-  [[related.indices]]
-  name  = "author"
-  toLower = true
-  weight = 30
-  [[related.indices]]
-  name  = "tags"
-  weight = 100
-  [[related.indices]]
-  name  = "date"
-  weight = 10
-  pattern = "2019"
+[[menu.social]]
+    name = "GitHub"
+    url = "https://github.com/iCyris"
+    weight = 3
 
