add home link to sidebar (sp)

--- a/saber-config.yml
+++ b/saber-config.yml
@@ -17,6 +17,11 @@ themeConfig:
     - title: "Friends"
       link: "/friends.html"
 
+  # The Home section on sidebar (mobile)
+  spHome:
+      title: "Home"
+      link: "/"
+
 markdown:
   highlighter: "prism"
 
