--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "cyris-blog",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -9,15 +9,13 @@
     "build": "saber build",
     "publish": "saber build && rm -rf docs && mv .saber/public docs"
   },
-  "devDependencies": {
-    "saber": "latest",
-    "saber-plugin-generate-feed": "^0.2.0",
-    "saber-plugin-query-posts": "^0.1.0",
-    "saber-theme-ume": "latest"
-  },
+  "devDependencies": {},
   "dependencies": {
+    "saber": "^0.4.2",
     "saber-highlighter-prism": "^0.2.0",
+    "saber-plugin-generate-feed": "^0.2.0",
     "saber-plugin-google-analytics": "^0.0.3",
-    "saber-theme-ume": "^1.0.3"
+    "saber-plugin-query-posts": "^0.1.0",
+    "saber-theme-ume": "^1.2.0"
   }
 }
