--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "saber-plugin-generate-feed": "^0.2.0",
     "saber-plugin-google-analytics": "^0.0.3",
     "saber-plugin-query-posts": "^0.1.0",
-    "saber-theme-ume": "^1.2.0"
+    "saber-theme-ume": "^1.2.1",
+    "sass": "^1.18.0",
+    "sass-loader": "^7.1.0"
   }
 }
