--- a/saber-config.yml
+++ b/saber-config.yml
@@ -29,7 +29,7 @@ markdown:
 
 plugins:
   - resolve: saber-plugin-query-posts
-  - resolve: saber-plugin-generate-feed
+  - resolve: saber-plugin-feed
   - resolve: "saber-plugin-google-analytics"
     options: 
       trackId: "UA-120896908-1"
